Add README and clarify server config

--- a/config.ini
+++ b/config.ini
@@ -3,5 +3,7 @@ token = YOUR_BOT_TOKEN_HERE
 channel_id = 1397341615655485442
 
 [server]
+# MTA:SA server IP address
 host = 127.0.0.1
+# MTA:SA ASE query port (not the game port)
 port = 22005
