--- a/config.ini
+++ b/config.ini
@@ -5,5 +5,6 @@ channel_id = 1397341615655485442
 [server]
 # MTA:SA server IP address
 host = 127.0.0.1
+short_server_name = MVP
 # MTA:SA ASE query port (not the game port)
 port = 22005
