Add connect_url configuration to config.ini and update bot to use dynamic button URL

--- a/config.ini
+++ b/config.ini
@@ -6,5 +6,6 @@ channel_id = 1397341615655485442
 # MTA:SA server IP address
 host = 127.0.0.1
 short_server_name = MVP
+connect_url = https://tinyurl.com/mtamvp1337
 # MTA:SA ASE query port (not the game port)
 port = 22005
