--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,13 @@
 [discord]
 token = YOUR_BOT_TOKEN_HERE
 channel_id = 1397341615655485442
+thumbnail_url = https://pixelz.xyz/ajIBYIyF.png
+image_url = https://pixelz.xyz/IZT0H4r7.webp
+short_server_name = MVP
+connect_url = https://tinyurl.com/mtamvp1337
 
 [server]
 # MTA:SA server IP address
 host = 127.0.0.1
-short_server_name = MVP
-connect_url = https://tinyurl.com/mtamvp1337
 # MTA:SA ASE query port (not the game port)
 port = 22005
