Add embed color configuration to config.ini and update bot to use dynamic embed color based on configuration.

--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,7 @@ thumbnail_url = https://pixelz.xyz/ajIBYIyF.png
 image_url = https://pixelz.xyz/IZT0H4r7.webp
 short_server_name = MVP
 connect_url = https://tinyurl.com/mtamvp1337
+embed_color = #ff9d00
 
 [server]
 # MTA:SA server IP address
