Refactor configuration structure by moving embed-related settings to a new [embed] section in config.ini and updating the bot's config loading logic accordingly.

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,10 @@
 [discord]
 token = YOUR_BOT_TOKEN_HERE
+
+[embed]
 channel_id = 1397341615655485442
 thumbnail_url = https://pixelz.xyz/ajIBYIyF.png
 image_url = https://pixelz.xyz/IZT0H4r7.webp
-short_server_name = MVP
 connect_url = https://tinyurl.com/mtamvp1337
 embed_color = #ff9d00
 
