Add footer text configuration to embed messages in DiscordBot
- Updated config.ini to include footer_text setting.
- Modified BotConfig to load footer_text from configuration.
- Implemented footer text in embed messages within DiscordBot class.

--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,7 @@ thumbnail_url = https://pixelz.xyz/ajIBYIyF.png
 image_url = https://pixelz.xyz/IZT0H4r7.webp
 connect_url = https://tinyurl.com/mtamvp1337
 embed_color = #ff9d00
+footer_text = Powered by MTA:SA Discord Player List Bot
 
 [server]
 # MTA:SA server IP address
